<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TerrainGIS</string>
    <!-- UI -->
    <string name="positive_button">OK</string>
    <string name="negative_button">Cancel</string>
    <!-- form components -->
    <string name="name_form">Name</string>
    <string name="type_form">Type</string>
    <string name="srid_form">SRS EPSG</string>
    <string name="attributes_form">Attributes</string>
    <string name="null_value_form">NULL</string>
    <string name="find_button_form">Find</string>
    <string name="charset_form">Charset</string>
    <!-- error messages -->
    <string name="location_fix_error">GPS is not fix!</string>
    <string name="location_error">Can not run location service!</string>
    <string name="name_layer_error">Layer name cannot be empty!</string>
    <string name="name_attribute_error">Attribute name can not be empty!</string>
    <string name="name_attribute_same_error">Attributes cannot have the same name!</string>
    <string name="concrete_name_attribute_error">Attribute can not have the name %s!</string>
    <string name="name_exist_error">The layer %s exists already!</string>
    <string name="tileslayer_remove_error">Can not remove tile layer!</string>
    <string name="not_selected_layer">There is no layer selected!</string>
    <string name="not_selected_vector_layer">There is no vector layer selected!</string>
    <string name="not_selected_object">There is no object selected!</string>
    <string name="not_selected_position">There is no position selected!</string>
    <string name="end_object_error">Few vertices for object!</string>
    <string name="empty_layer_error">Layer %s is empty!</string>
    <string name="device_no_gps_error">Device does not have GPS!</string>
    <string name="srid_empty_error">SRS is empty!</string>
    <string name="charset_empty_error">Charset is empty!</string>
    <string name="bad_shapefile_error">Bad Shapefile name!</string>
    <string name="import_shapefile_error">Can not import Shapefile!</string>
    <string name="export_shapefile_error">Can not export Shapefile!</string>
    <string name="database_error">Problem with using database!</string>
    <string name="app_directory_create_error">Can not create application directory!</string>
    <string name="tilecache_open_error">Can not open tile cache file!</string>
    <!-- map buttons -->
    <string name="button_add_point">Add point</string>
    <string name="button_move_point">Move point</string>
    <string name="button_end_object">End object</string>
    <string name="button_record_auto_start">Start automatic</string>
    <string name="button_record_auto_stop">Stop automatic</string>
    <string name="button_remove">Remove selected</string>
    <string name="button_back">Back</string>
    <string name="button_record_topology_point">Add topology vertex</string>
    <!-- Actionbar icon titles -->
    <string name="title_edit">Editing</string>
    <string name="title_gps">GPS</string>
    <string name="title_show_gps">Show location</string>
    <string name="title_add_point">Add points</string>
    <string name="title_settings">Settings</string>
    <string name="title_topology">Create topology</string>
    <!-- Toolbar panel icon titles -->
    <string name="title_show_attributes">Show attribute table</string>
    <string name="title_show_layers">Show layers</string>
    <string name="title_hide_layer">Hide/show layer</string>
    <string name="title_zoom_layer">Zoom to layer</string>
    <string name="title_add_layer">Add layer</string>
    <string name="title_zoom_object">Zoom to object</string>
    <string name="title_edit_attributes">Edit attributes</string>
    <string name="title_remove_object">Remove object</string>
    <string name="title_hide_panel">Hide panel</string>
    <!-- new layer dialog -->
    <string name="new_layer_message">New layer</string>
    <string name="empty_layer">Empty layer</string>
    <string name="import_shapefile">Import Shapefile</string>
    <!-- empty layer dialog -->
    <string name="empty_layer_message">New empty layer</string>
    <string-array name="layer_type">
        <item>POINT</item>
        <item>LINESTRING</item>
        <item>POLYGON</item>
    </string-array>
    <!-- set attributes dialog -->
    <string name="set_attributes_message">Save object</string>
    <!-- find srid dialog -->
    <string name="find_srid_message">Find SRS</string>
    <!-- layers context menu -->
    <string name="menu_remove_layer">Remove layer</string>
    <string name="menu_export_shapefile">Export Shapefile</string>
    <!-- settings -->
    <string name="settings_gps_category">GPS</string>
    <string name="settings_record_min_distance_summary">Minimal distance of vertices</string>
    <string name="settings_record_min_distance_title">for autorecord, in meters</string>
    <string name="settings_record_min_accuracy_summary">Minimal accuracy of vertex</string>
    <string name="settings_record_min_accuracy_title">for autorecord, in meters</string>
    <string name="settings_record_min_time_summary">Minimal time between vertices</string>
    <string name="settings_record_min_time_title">saves battery, in seconds</string>
    <!-- other -->
    <string name="confirm_remove_message">Really remove layer %s?</string>
    <string name="confirm_remove_object_message">Really remove selected object?</string>
    <string name="exit_message">Do you want to exit?</string>
</resources>