<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_edit"
        android:checkable="true"
        android:showAsAction="always"
        android:icon="@drawable/ic_menu_edit_off"
        android:title="@string/title_edit"/>
    <item android:id="@+id/menu_add_point"
        android:checkable="true"
        android:showAsAction="always"
        android:icon="@drawable/ic_menu_add_point_off"
        android:title="@string/title_add_point"/>
    <item android:id="@+id/menu_record"
        android:checkable="true"
        android:showAsAction="always"
        android:icon="@drawable/ic_menu_record_off"
        android:title="@string/title_record"/>
    <item android:id="@+id/menu_location"
        android:checkable="true"
        android:showAsAction="always"
        android:icon="@drawable/ic_menu_gps_off"
        android:title="@string/title_gps"/>
    <item android:id="@+id/menu_show_location"
          android:showAsAction="always"
          android:icon="@drawable/ic_menu_show_gps"
          android:title="@string/title_show_gps"/>
    <item android:id="@+id/menu_settings"
          android:showAsAction="always"
          android:icon="@drawable/ic_menu_settings"
          android:title="@string/title_settings"/>
</menu>
