<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_form"
        android:textAppearance="?android:attr/textAppearanceMedium" />

	<EditText
	    android:id="@+id/edit_text_name_shapefile"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/name_form" >
	
	    <requestFocus />
	</EditText>

	<TextView
	    android:id="@+id/textView4"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/srid_form"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

		<EditText
		    android:id="@+id/edit_text_srid_shapefile"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:ems="10"
		    android:hint="@string/srid_form"
		    android:inputType="number" />

		<Button
		    android:id="@+id/button_run_find_dialog"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/find_button_form" />

	</LinearLayout>

	<TextView
	    android:id="@+id/textView5"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/charset_form"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<EditText
	    android:id="@+id/edit_text_charset_shapefile"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/charset_form" >
	
	    <requestFocus />
	</EditText>	
</LinearLayout>