<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="1" >
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_layersfragment_toolbar">

        <ImageButton
            android:id="@+id/button_hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_hide_left"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:contentDescription="@string/title_hide_panel"
            android:padding="14dp" />
        
        <ImageButton
            android:id="@+id/button_switch_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_layers"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:contentDescription="@string/title_show_layers"
            android:padding="14dp" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:id="@+id/button_zoom_to_object"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_zoom_to_layer"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:contentDescription="@string/title_zoom_object"
            android:layout_weight="0"
            android:padding="14dp" />
        
        <ImageButton
            android:id="@+id/button_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_edit_off"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:contentDescription="@string/title_edit_attributes"
            android:layout_weight="0"
            android:padding="14dp" />

        <ImageButton
            android:id="@+id/button_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_remove"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:contentDescription="@string/title_remove_object"
            android:layout_weight="0"
            android:padding="14dp" />

    </LinearLayout>
    
    <cz.kalcik.vojta.terraingis.view.VScroll
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/vScroll"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >
	    <cz.kalcik.vojta.terraingis.view.HScroll
		    android:id="@+id/hScroll"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent" >
	
		    <TableLayout android:layout_width="wrap_content"
		  		android:layout_height="wrap_content"
		  		android:id="@+id/attributeTable">
	     
			</TableLayout>
		</cz.kalcik.vojta.terraingis.view.HScroll>
	</cz.kalcik.vojta.terraingis.view.VScroll>	   
</LinearLayout>
