<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_form"
        android:textAppearance="?android:attr/textAppearanceMedium"
        style="@style/subtitle_dialog_style" />

	<EditText
	    android:id="@+id/edit_text_name_empty"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/name_form" >
	
	    <requestFocus />
	</EditText>

	<TextView
	    android:id="@+id/textView2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/type_form"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    style="@style/subtitle_dialog_style" />

	<Spinner
	    android:id="@+id/spinner_layer_type"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:entries="@array/layer_type"/>

	<TextView
	    android:id="@+id/textView3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/attributes_form"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    style="@style/subtitle_dialog_style" />

	<ScrollView
	    android:id="@+id/scrollView1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:id="@+id/empty_layer_dialog_layout">

		</LinearLayout>

	</ScrollView>
	
    <ImageButton
        android:id="@+id/button_add"
        android:layout_width="70dip"
        android:layout_height="70dip"
        android:src="@drawable/add" />

</LinearLayout>